test for overflow x on html fix removed

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,9 +21,7 @@ div.code-toolbar{position:relative}div.code-toolbar>.toolbar{position:absolute;z
   }
 }
 
-html {
-  overflow-x: hidden;
-}
+
 
 a:any-link {
   color: currentColor;
